--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+
+* {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 .main-header .container {
     display: flex;
     justify-content: space-between;
@@ -5,8 +11,32 @@
     padding: 5px;
 }
 
-.site-body *{
+.site-body * {
     display: flex;
     justify-content: center;
+    flex-flow: column;
+    text-align: center;
+    align-items: center;
+}
+
+.site-body button {
+    transition-duration: 0.4s;
+    background-color: #008CBA;
+    border: none;
+    border-radius: 4px;
+    border-color: #008CBA;
+    border-style: solid;
+    border-width: 2px;
+    color: white;
+    padding: 10px 16px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
+.site-body button:hover {
+    background-color: white;
+    color: black;
 }
 
