--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -4,11 +4,19 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.main-header {
+    margin: 5px;
+}
+
 .main-header .container {
     display: flex;
     justify-content: space-between;
     flex-flow: row;
     padding: 5px;
+}
+
+.site-body {
+    border-top: 3px solid black;
 }
 
 .site-body * {
@@ -17,6 +25,14 @@
     flex-flow: column;
     text-align: center;
     align-items: center;
+}
+
+.site-body h2 {
+    font-size: 30px;
+}
+
+.site-body p {
+    margin: 25px;
 }
 
 .site-body button {
@@ -40,3 +56,16 @@
     color: black;
 }
 
+.site-body ul {
+    padding-left: 0px;
+    width: 75%;
+}
+
+.site-body ul button {
+    width: 100%;
+    transition-duration: 0s;
+}
+
+.site-body div * {
+    margin-left: 0;
+}
